--- a/registration_style.css
+++ b/registration_style.css
@@ -17,7 +17,7 @@ table{
   font-size: 11pt; 
   font-style: normal;
   font-weight: bold;
-  text-align:; 
+  text-align:center; 
   background-color: Black; 
   border-collapse: collapse; 
   border: 2px solid Yellow
