--- a/db/db__style.css
+++ b/db/db__style.css
@@ -15,27 +15,8 @@ h2 {
 	font-size: 80px;
 }
 
-h4 {
-	margin-left: 100px;
-}
-
-h6 {
-	margin-left: 100px;
-}
-
-p {
-	margin-left: 150px;
-	margin-right: 150px;
-}
-
 .exmp {
-	margin-left: 300px;
-	margin-right: 300px;
-	border-style: solid;
-	border-color: #d3d3d3;
 	text-align: center;
-	color: #aaff00;
-	background-color: black;
 }
 
 xmp {
@@ -43,13 +24,12 @@ xmp {
 	text-align: left;
 }
 
-ul {
-	margin-left: 150px;
-	margin-right: 150px;
+a {
+	margin: 50px;
+	text-align: center;
 }
 
 .button {
-	margin: 10px;
 	display: inline-block;
 	font-family: Arial, sans-serif;
 	font-size: 15px;
