--- a/Internet Basics/Subtopic_style.css
+++ b/Internet Basics/Subtopic_style.css
@@ -1,14 +1,43 @@
 body {
-	background-color: #fffe7a;
+	margin: 0;
+	padding: 0;
 	font-family: Verdana, sans-serif;
+	background-color: #d3d3d3;
 }
 
-h1 {
-	font-family: Georgia, serif;
+h2 {
+	margin: 0;
+	padding: 50px;
 	text-align: center;
+	color: #ffef96;
+	background-color: #50394c;
+	font-family: 'Times New Roman', serif;
+	font-size: 80px;
 }
 
 h4 {
 	font-family: Georgia, serif;
+	margin-left: 100px;
 }
 
+p {
+	margin-left: 150px;
+	margin-right: 150px;
+}
+
+ul {
+	margin-left: 150px;
+	margin-right: 150px;
+}
+
+.button {
+	margin: 10px;
+	display: inline-block;
+	font-family: Arial, sans-serif;
+	font-size: 15px;
+	text-decoration: none;
+	text-align: center;
+	background-color: green;
+	color: white;
+	padding: 10px;
+}
